--- a/config/movies.conf
+++ b/config/movies.conf
@@ -1,6 +1,6 @@
 input {
  file {
-     path => "${PWD}/movies3.json"
+     path => "${PWD}/movies.json"
      start_position => "beginning"
      sincedb_path => "/dev/null" 
 }
